# colorchecker_android

./: .gitignore  settings.gradle
OpenCV/: build.gradle
OpenCV/java/src/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/dev/splat/colorchecker/: MainActivity.java  Utils.java
app/src/main/java/dev/splat/colorchecker/adapters/: ResultsViewAdapter.java
app/src/main/java/dev/splat/colorchecker/models/: Result.java
app/src/main/res/layout/: activity_main.xml  result_item.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
